Update html file

--- a/index.html
+++ b/index.html
@@ -34,24 +34,19 @@
                         <a>
                             <ul class="links_list">
                                 <li class="media_links">
-                                    <a href="#"><img src="./assets/twitterIcon.svg" alt="icon for twitter"/>
-                                    </a>
+                                    <a href="#"><img src="./assets/twitterIcon.svg" alt="icon for twitter"/></a>
                                 </li>                            
                                 <li class="media_links">
-                                    <a href=""><img src="./assets/linkedInIcon.png" alt="icon for linkedIn"/>
-                                    </a>
+                                    <a href=""><img src="./assets/linkedInIcon.png" alt="icon for linkedIn"/></a>
                                 </li>
                                 <li class="media_links">
-                                    <a href=""><img src="./assets/mIcon.svg" alt="icon for Medium"/>
-                                    </a>
+                                    <a href=""><img src="./assets/mIcon.svg" alt="icon for Medium"/></a>
                                 </li>
                                 <li class="media_links">
-                                    <a href=""><img src="./assets/gitHubIcon.svg" alt="icon for GitHub"/>
-                                    </a>
+                                    <a href=""><img src="./assets/gitHubIcon.svg" alt="icon for GitHub"/></a>
                                 </li>
                                 <li class="media_links">
-                                    <a href=""><img src="./assets/peaceIcon.svg" alt="icon for M"/>
-                                    </a>
+                                    <a href=""><img src="./assets/peaceIcon.svg" alt="icon for M"/></a>
                                 </li>
                             </ul>
                         </a>
@@ -60,6 +55,5 @@
             </main>
         </div>
     </div>
-    <h1></h1>
 </body>
 </html>
