Modify html and css files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               </nav>
             </header>
     <!-- Defining the main section for the description of the developer -->
-            <main class="main_section">
+            <section class="main_section">
                 <div class="container">
                   <h1 class="h1">I am Ernest Lasten. Glad to see you!</h1>
                     <p class="main_content">
@@ -50,7 +50,7 @@
                         </ul>
                     </div>
                 </div>
-            </main>
+            </section>
         </div>
     </div>
 </body>
