--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Defining the main section for the description of the developer -->
             <section class="main_section">
                 <div class="container">
-                  <h1 class="h1">I am Ernest Lasten. Glad to see you!</h1>
+                  <h1 class="h1">I’m Ernest Lasten. Glad to see you!</h1>
                     <p class="main_content">
                         I’m a software developer! I can help you build a product ,
                         feature or website Look through some of my work and experience!
