--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         don’t hestiate to contact me.
                     </p>
                     <div class="connect_links">
-                        <a class="connect_text">LET'S CONNECT</a>
+                        <a href="#" class="connect_text">LET'S CONNECT</a>
                         <ul class="links_list">
                             <li class="media_links">
                                 <a href="#"><img src="./assets/twitterIcon.svg" alt="icon for twitter"/></a>
